--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -1,13 +1,44 @@
+@import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-/*
-
-@layer components {
-  .btn-primary {
-    @apply py-2 px-4 bg-blue-200;
-  }
+@font-face {
+  font-family: 'Avenir';
+  src: url('<%= asset_path("fonts/avenir/AvenirLTStd-Black.otf") %>')
+    format('opentype');
 }
 
-*/
+:root {
+  --background: 218 65% 100%;
+  --foreground: 218 69% 2%;
+  --muted: 188 35% 92%;
+  --muted-foreground: 188 11% 36%;
+  --popover: 0 0% 99%;
+  --popover-foreground: 218 69% 1%;
+  --card: 0 0% 99%;
+  --card-foreground: 218 69% 1%;
+  --border: 218 10% 95%;
+  --input: 218 10% 95%;
+  --primary: 13.8 100% 60.78%;
+  --primary-foreground: 218 47% 99%;
+  --secondary: 300 43.28% 26.27%;
+  --secondary-foreground: 0 0% 100%;
+  --accent: 193.47 73.13% 39.41%;
+  --accent-foreground: 248 47% 99%;
+  --destructive: 13 98% 27%;
+  --destructive-foreground: 13 98% 87%;
+  --ring: 218 47% 39%;
+  --radius: 0.5rem;
+}
+
+@layer components {
+  html {
+    scroll-behavior: smooth;
+    @apply font-manrope;
+  }
+  .btn-primary {
+    @apply py-2 px-4 bg-primarySunset;
+  }
+}
