--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -36,9 +36,17 @@
 @layer components {
   html {
     scroll-behavior: smooth;
-    @apply font-manrope;
+    @apply font-manrope text-secondaryCharcoal dark:text-white text-base;
   }
   .btn-primary {
-    @apply py-2 px-4 bg-primarySunset;
+    @apply bg-primarySunset text-white hover:text-primarySunset px-4 py-2 rounded-full hover:bg-transparent border border-primarySunset transition duration-300 flex items-center ;
+  }
+
+  .btn-secondary {
+    @apply bg-secondaryPlum text-white hover:text-secondaryPlum px-4 py-2 rounded-full hover:bg-transparent border border-secondaryPlum transition duration-300 flex items-center;
+  }
+
+  .btn-outline {
+    @apply border border-secondaryCharcoal text-secondaryCharcoal hover:bg-secondaryCharcoal hover:text-white px-4 py-2 rounded-full transition duration-300 flex items-center;
   }
 }
