--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -25,11 +25,11 @@
       <nav>
         <ul class="flex space-x-4 font-bold">
           <li class="relative">
-            <input type="text" placeholder="Search" class="border border-gray-500 rounded px-2 py-1 bg-transparent text-sm">
+            <input type="text" placeholder="Search" class="btn-outline bg-transparent text-sm">
             <i class="fa-solid fa-magnifying-glass text-gray-400 absolute right-4 top-4 transform -translate-y-1/2"></i>
           </li>
           </li class="">
-            <%= link_to 'Sign In', new_user_session_path, method: :get, class: 'bg-primarySunset text-white hover:text-primarySunset px-4 py-1 rounded hover:bg-transparent border border-primarySunset transition duration-300' %>
+            <%= link_to 'Sign In', new_user_session_path, method: :get, class: 'btn-primary text-sm' %>
           </li class="hover:underline hover:text-primarySunset">
         </ul>
       </nav>
