feat: add tractor listing & tractors models

--- a/app/views/home/_hero.html.erb
+++ b/app/views/home/_hero.html.erb
@@ -8,7 +8,7 @@
        <i class="fa-solid fa-square-arrow-up-right ml-2"></i>
       </button>
       <button class="btn-outline w-fit">
-        <%= link_to 'Sell Your Tractor', new_user_session_path, method: :get %>
+        <%= link_to 'Sell Your Tractor', new_user_registration_path, method: :get %>
       </button>
     </div>
     <div class="h-96 relative hover:scale-[1.01] transition duration-300 cursor-pointer">
