--- a/app/views/pwa/manifest.json.erb
+++ b/app/views/pwa/manifest.json.erb
@@ -1,22 +1,137 @@
 {
-  "name": "HelloTractor",
+  "name": "hello tractor",
+  "short_name": "hello tractor",
+  "description": "Keep record of your hello tractor answers & score.",
+  "scope": "/",
+  "start_url": "/",
+  "display": "standalone",
+  "orientation": "portrait",
+  "categories": ["agriculture", "agritech"],
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "/favicon.ico",
+      "type": "image/x-icon",
+      "sizes": "16x16"
+    },
+    {
+      "src": "/icon-48.png",
+      "type": "image/png",
+      "sizes": "48x48"
+    },
+    {
+      "src": "/icon-72.png",
+      "type": "image/png",
+      "sizes": "72x72"
+    },
+    {
+      "src": "/icon-96.png",
+      "type": "image/png",
+      "sizes": "96x96"
+    },
+    {
+      "src": "/icon-144.png",
+      "type": "image/png",
+      "sizes": "144x144"
+    },
+    {
+      "src": "/icon-168.png",
+      "type": "image/png",
+      "sizes": "168x168"
+    },
+    {
+      "src": "/icon-192.png",
+      "type": "image/png",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/icon-512.png",
       "type": "image/png",
       "sizes": "512x512"
     },
     {
-      "src": "/icon.png",
+      "src": "/icon-48-maskable.png",
+      "type": "image/png",
+      "sizes": "48x48",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icon-72-maskable.png",
+      "type": "image/png",
+      "sizes": "72x72",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icon-96-maskable.png",
+      "type": "image/png",
+      "sizes": "96x96",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icon-144-maskable.png",
+      "type": "image/png",
+      "sizes": "144x144",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icon-168-maskable.png",
+      "type": "image/png",
+      "sizes": "168x168",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icon-192-maskable.png",
+      "type": "image/png",
+      "sizes": "192x192",
+      "purpose": "maskable"
+    },
+    {
+      "src": "/icon-512-maskable.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "maskable"
     }
   ],
-  "start_url": "/",
-  "display": "standalone",
-  "scope": "/",
-  "description": "HelloTractor.",
-  "theme_color": "red",
-  "background_color": "red"
-}
+  "screenshots": [
+  {
+  "src": "/desktop.png",
+  "sizes": "1024x768",
+  "type": "image/png",
+  "form_factor": "wide"
+  },
+  {
+  "src": "/mobile.png",
+  "sizes": "640x480",
+  "type": "image/png",
+  "form_factor": "narrow"
+  }
+  ],
+  "shortcuts": [
+    {
+      "name": "View Surprise Songs",
+      "short_name": "Surprise Songs",
+      "description": "View surprise songs history and stats.",
+      "url": "/surprise_songs?tab=songs"
+    },
+    {
+      "name": "View Outfit Stats",
+      "short_name": "Outfit Stats",
+      "description": "View outfits stats and tracker.",
+      "url": "/outfits/tracker?tab=stats"
+    },
+    {
+      "name": "View Stats",
+      "short_name": "Stats",
+      "description": "View Statistics",
+      "url": "/stats"
+    },
+    {
+      "name": "View Leaderboards",
+      "short_name": "Leaderboards",
+      "description": "View Leaderboards",
+      "url": "/leaderboard"
+    }
+  ],
+  "theme_color": "#f2f2f2",
+  "background_color": "#f2f2f2"
+  }
+
