feat: add bottom nav for mobile

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<ul class="flex-col flex fixed w-fit dark:bg-black bg-gray-50 px-2 py-8 gap-6  font-normal text-sm z-50 font-courier h-screen shadow" id="sidebar">
+<ul class="flex-col lg:flex hidden fixed w-fit dark:bg-black bg-gray-50 px-2 py-8 gap-6  font-normal text-sm z-50 font-courier h-screen shadow" id="sidebar">
 
   <%= link_to root_path, class: "flex items-center" do %>
     <%= image_tag 'logos/orange-icon.png', class: "w-10" %>
