fix issues + admin dashboard init

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,8 @@
       <% end %>
       <%= yield %>
     </main>
-    <%= render 'layouts/bottom_nav' %>
+    <% if current_user %>
+      <%= render 'layouts/bottom_nav' %>
+    <% end %>
   </body>
 </html>
