--- a/app/views/tractor_listings/show.html.erb
+++ b/app/views/tractor_listings/show.html.erb
@@ -42,7 +42,7 @@
       <p class="text-gray-500 text-center">
         You have no tractors in your listing.
       </p>
-      <%= link_to 'Add Tractor', new_tractor_listing_tractor_path(@tractor_listing), class: 'btn btn-primary px-4 py-2 rounded-md shadow-sm bg-blue-500 text-white hover:bg-blue-600' %>
+      <%= link_to 'Add Tractor', new_tractor_listing_tractor_path(@tractor_listing), class: 'btn btn-primary px-4 py-2 rounded-md shadow-sm' %>
     </div>
   <% end %>
 </div>
