--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,4 +1,4 @@
-<header class="bg-gray-100 shadow text-secondaryCharcoal text-sm">
+<header class="bg-gray-100 shadow-md text-secondaryCharcoal text-sm fixed w-full">
     <div class="px-4 py-3 flex justify-between items-center">
       <nav>
         <ul class="flex space-x-4 font-bold">
@@ -20,7 +20,7 @@
         </ul>
       </nav>
       <%= link_to root_path, class: "flex items-center" do %>
-        <%= image_tag "logos/orange.png", class: "w-16" %>
+        <%= image_tag "logos/orange.png", class: "absolute top-1/2  transform -translate-x-1/2 -translate-y-1/2 w-28" %>
       <% end %>
       <nav>
         <ul class="flex space-x-4 font-bold">
