--- a/app/views/tractors/_form.html.erb
+++ b/app/views/tractors/_form.html.erb
@@ -5,8 +5,8 @@
 
     <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
       <div class="flex flex-col gap-2">
-        <%= f.label :brand %>
-        <%= f.text_field :brand, class: 'form-input' %>
+        <%= f.label :make %>
+        <%= f.text_field :make, class: 'form-input' %>
       </div>
       <div class="flex flex-col gap-2">
         <%= f.label :model %>
