--- a/app/views/home/_landing_page.html.erb
+++ b/app/views/home/_landing_page.html.erb
@@ -1,4 +1,3 @@
-<div class="min-h-screen bg-gray-100  antialiased">
- <%= render 'navbar' %>
+<div class="min-h-screen bg-gray-100">
  <%= render 'hero' %>
 </div>
