--- a/app/views/tractors/index.html.erb
+++ b/app/views/tractors/index.html.erb
@@ -1,5 +1,7 @@
 <%= form_with url: tractors_path, method: :get, class: "space-y-6" do %>
   <div class="min-h-screen bg-gray-100 px-4 antialiased flex pt-20">
+
+  <% unless @tractors.empty? %>
     <div class="w-full lg:w-3/4">
       <div class="grid grid-cols-1 md::grid-cols-2 lg:grid-cols-3 gap-3 mt-4">
         <% @tractors.each do |tractor| %>
@@ -24,6 +26,11 @@
         <% end %>
       </div>
     </div>
+  <% else %>
+    <div class="w-full lg:w-3/4 flex justify-center items-center bg-blue-100 rounded font-medium uppercase">
+       No Tractors.
+    </div>
+  <% end %>
 
     <div class="w-full lg:w-1/4 p-6 text-sm border-l ml-6 fixed right-0">
       <h3 class="text-base font-semibold text-gray-800 mb-4 flex items-center gap-2">
