--- a/app/views/tractors/index.html.erb
+++ b/app/views/tractors/index.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: tractors_path, method: :get, class: "space-y-6" do %>
-  <div class="min-h-screen bg-gray-100 px-4 antialiased flex pt-20">
+  <div class="min-h-screen px-4 antialiased flex pt-20">
 
   <% unless @tractors.empty? %>
     <div class="w-full lg:w-3/4">
@@ -19,8 +19,9 @@
                 <p class="text-gray-600 flex items-center gap-2"><strong><i class="fa-solid fa-clock"></i></strong> <%= tractor.hours_used %> hours</p>
               </div>
             </div>
-            <div class="p-2 text-sm">
+            <div class="p-2 text-sm flex justify-between">
               <%= link_to 'View Details', tractor_listing_tractor_path(tractor.tractor_listing, tractor), class: "text-indigo-600 hover:underline" %>
+               <%= link_to 'Message Buyer', tractor_listing_tractor_path(tractor.tractor_listing, tractor), class: "text-indigo-600 hover:underline" %>
             </div>
           </div>
         <% end %>
@@ -92,4 +93,6 @@
 <% end %>
 
 <!-- Pagination (optional) -->
-
+<div class="flex justify-end mt-3 overflow-x-auto">
+  <%= will_paginate @tractors %>
+</div>
