--- a/app/views/tractors/index.html.erb
+++ b/app/views/tractors/index.html.erb
@@ -1,5 +1,5 @@
 <%= form_with url: tractors_path, method: :get, class: "space-y-6" do %>
-  <div class="min-h-screen px-4 antialiased flex pt-20">
+  <div class="min-h-screen <%= current_user ? '' : 'px-4 pt-20' %> flex">
 
   <% unless @tractors.empty? %>
     <div class="w-full lg:w-3/4">
