add dealers & locations

--- a/app/views/components/_dropdown.html.erb
+++ b/app/views/components/_dropdown.html.erb
@@ -1,5 +1,5 @@
 <div data-controller="dropdown" class='relative'>
-  <button data-action="click->dropdown#toggle" class="flex items-center gap-1 px-4 py-2 w-full">
+  <button data-action="click->dropdown#toggle" class="btn-outline">
     <p class='flex items-center gap-3 capitalize'>
       <span class><%= title %></span>
       <i class="<%= icon_class %>"></i>
