--- a/app/views/tractors/_form.html.erb
+++ b/app/views/tractors/_form.html.erb
@@ -30,8 +30,10 @@
       </div>
 
       <% if current_user.admin? %>
-        <%= f.label :publishing_status %>
-        <%= f.select :publishing_status, tractor.class.publishing_statuses.keys.map { |status| [status.titleize, status] }, {}, class: 'form-input' %>
+        <div class="flex flex-col gap-2">
+          <%= f.label :publishing_status %>
+          <%= f.select :publishing_status, tractor.class.publishing_statuses.keys.map { |status| [status.titleize, status] }, {}, class: 'form-input' %>
+        </div>
       <% else %>
         <div class="flex flex-col gap-2">
           <%= f.label :publishing_status %>
@@ -47,13 +49,6 @@
         <%= f.number_field :price, class: 'form-input' %>
       </div>
 
-      <% if current_user.admin? %>
-        <div class="flex flex-col gap-2">
-          <%= f.label :publishing_status %>
-          <%= f.select :publishing_status, tractor.class.publishing_statuses.keys.map { |status| [status.titleize, status] }, {}, class: 'form-input' %>
-        </div>
-      <% end %>
-
       <% if action_name == 'edit' %>
         <div class="flex flex-col gap-2">
           <%= f.label :selling_status %>
@@ -67,7 +62,9 @@
       </div>
     </div>
 
-    <%= render 'tractors/images_dropzone', f: f  %>
+    <% if action_name == 'new' %>
+      <%= render 'tractors/images_dropzone', f: f  %>
+    <% end %>
 
     <%= f.submit class: 'w-fit btn-primary mt-4' %>
 <% end %>
