--- a/app/views/home/_navbar.html.erb
+++ b/app/views/home/_navbar.html.erb
@@ -1,4 +1,4 @@
-<header class="bg-gray-100 shadow-md text-secondaryCharcoal text-sm fixed w-full">
+<header class="bg-gray-100 shadow-md text-secondaryCharcoal text-sm fixed w-full z-50">
     <div class="px-4 py-3 flex justify-between items-center">
       <nav>
         <div class="md:hidden">
