--- a/app/views/tractors/index.html.erb
+++ b/app/views/tractors/index.html.erb
@@ -3,7 +3,7 @@
 
   <% unless @tractors.empty? %>
     <div class="w-full lg:w-3/4">
-      <div class="grid grid-cols-1 md::grid-cols-2 lg:grid-cols-3 gap-3 mt-4">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-3 mt-4">
         <% @tractors.each do |tractor| %>
           <div class="bg-white p-1 rounded shadow-md hover:shadow-lg transition duration-300">
             <% if tractor.images.attached? %>
@@ -28,7 +28,7 @@
       </div>
     </div>
   <% else %>
-    <div class="w-full lg:w-3/4 flex justify-center items-center bg-blue-100 rounded font-medium uppercase">
+    <div class="w-full lg:w-3/4 flex justify-center items-center bg-gray-100 rounded font-medium uppercase">
        No Tractors.
     </div>
   <% end %>
