--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="relative min-h-screen flex items-center justify-center p-4">
+<div class="relative min-h-screen flex items-center justify-center py-4 pt-20 text-sm">
   <div class="fixed inset-0 bg-[url('tractor-one')] bg-cover bg-center blur-sm"></div>
   <div class="fixed inset-0 bg-black/50"></div>
   
