--- a/app/views/dashboards/_buyer.html.erb
+++ b/app/views/dashboards/_buyer.html.erb
@@ -18,8 +18,9 @@
                 <p class="text-gray-600 flex items-center gap-2"><strong><i class="fa-solid fa-clock"></i></strong> <%= tractor.hours_used %> hours</p>
               </div>
             </div>
-            <div class="p-2 text-sm">
+            <div class="p-2 text-sm flex items-center gap-4">
               <%= link_to 'View Details', tractor_listing_tractor_path(tractor.tractor_listing, tractor), class: "text-indigo-600 hover:underline" %>
+              <%= link_to 'Message Seller', new_message_path(sender: current_user, receiver: tractor.user, item_id: tractor, item_type: 'tractor'), class: "text-indigo-600 hover:underline" %>
             </div>
           </div>
         <% end %>
