--- a/app/views/dealers/index.html.erb
+++ b/app/views/dealers/index.html.erb
@@ -4,7 +4,7 @@
     {text: 'Dealers', path: dealers_path }
   ] %>
 
-  <h1 class="text-2xl font-bold text-gray-800 capitalize mt-4">Sellers (<%= @dealers.size %>)</h1>
+  <h1 class="text-2xl font-bold text-gray-800 capitalize mt-4">Dealers (<%= @dealers.size %>)</h1>
 
   <% unless @dealers.empty? %>
     <div class="overflow-x-auto mt-4 bg-white rounded-md shadow-sm border border-gray-200">
