--- a/app/views/dashboards/_buyer.html.erb
+++ b/app/views/dashboards/_buyer.html.erb
@@ -1,7 +1,7 @@
 <%= form_with url: tractors_path, method: :get, class: "" do %>
   <div class="min-h-screen px-4 antialiased flex">
   <% unless @tractors.empty? %>
-    <div class="">
+    <div class="flex">
       <div class="grid grid-cols-1 md::grid-cols-2 lg:grid-cols-3 gap-3">
         <% @tractors.each do |tractor| %>
           <div class="bg-white p-1 rounded shadow-md hover:shadow-lg transition duration-300">
@@ -25,69 +25,68 @@
           </div>
         <% end %>
       </div>
-    </div>
-  <% else %>
-    <div class="flex justify-center items-center bg-gray-100 rounded font-medium uppercase">
-       No Tractors.
-    </div>
-  <% end %>
-
-    <div class="w-full lg:w-1/4 text-sm border-l ml-6 lg:fixed right-0">
-      <h3 class="text-base font-semibold text-gray-800 mb-4 flex items-center gap-2">
-       <i class="fa-solid fa-filter"></i>
-       Filters
-      </h3>
-      <div class="space-y-6">
-        <!-- Make Filter -->
-        <div>
-          <label for="make" class="block text-gray-700">Make</label>
-          <input type="text" id="make" name="make" value="<%= params[:make] %>"
-                 class="text-sm mt-1 rounded px-4 y-1" placeholder="Eg. Massey Ferguson">
-        </div>
-
-        <!-- Model Filter -->
-        <div>
-          <label for="model" class="block text-gray-700">Model</label>
-          <input type="text" id="model" name="model" value="<%= params[:model] %>"
-                 class="text-sm mt-1 rounded px-4 y-1" placeholder="Enter model">
-        </div>
-
-        <!-- Price Range Filters -->
-        <div>
-          <label for="min_price" class="block text-gray-700">Price Range</label>
-          <div class="flex space-x-4">
-            <input type="number" id="min_price" name="min_price" value="<%= params[:min_price] %>"
-                   class="text-sm w-1/2 mt-1 px-4 py-2" placeholder="Min Price">
-            <input type="number" id="max_price" name="max_price" value="<%= params[:max_price] %>"
-                   class="text-sm w-1/2 mt-1 px-4 py-2" placeholder="Max Price">
+      <div class="w-full lg:w-1/4 text-sm border-l ml-6 lg:fixed right-0">
+        <h3 class="text-base font-semibold text-gray-800 mb-4 flex items-center gap-2">
+        <i class="fa-solid fa-filter"></i>
+        Filters
+        </h3>
+        <div class="space-y-6">
+          <!-- Make Filter -->
+          <div>
+            <label for="make" class="block text-gray-700">Make</label>
+            <input type="text" id="make" name="make" value="<%= params[:make] %>"
+                  class="text-sm mt-1 rounded px-4 y-1" placeholder="Eg. Massey Ferguson">
           </div>
-        </div>
 
-        <!-- Location Filter -->
-        <div>
-          <label for="location" class="block text-gray-700">Location</label>
-          <input type="text" id="location" name="location" value="<%= params[:location] %>"
-                 class="text-sm mt-1 rounded px-4 y-1" placeholder="Enter location">
-        </div>
+          <!-- Model Filter -->
+          <div>
+            <label for="model" class="block text-gray-700">Model</label>
+            <input type="text" id="model" name="model" value="<%= params[:model] %>"
+                  class="text-sm mt-1 rounded px-4 y-1" placeholder="Enter model">
+          </div>
 
-        <!-- Hours of Usage Filter -->
-        <div>
-          <label for="max_hours" class="block text-gray-700">Max Hours of Usage</label>
-          <input type="number" id="max_hours" name="max_hours" value="<%= params[:max_hours] %>"
-                 class="text-sm mt-1 rounded px-4 y-1" placeholder="Max Hours">
-        </div>
+          <!-- Price Range Filters -->
+          <div>
+            <label for="min_price" class="block text-gray-700">Price Range</label>
+            <div class="flex space-x-4">
+              <input type="number" id="min_price" name="min_price" value="<%= params[:min_price] %>"
+                    class="text-sm w-1/2 mt-1 px-4 py-2" placeholder="Min Price">
+              <input type="number" id="max_price" name="max_price" value="<%= params[:max_price] %>"
+                    class="text-sm w-1/2 mt-1 px-4 py-2" placeholder="Max Price">
+            </div>
+          </div>
 
-        <!-- Submit Button -->
-        <div class="mt-6 flex items-center gap-5">
-          <button type="submit" class="btn-primary">
-            Apply Filters
-          </button>
-          <%= link_to tractors_path, class:"btn-outline" do %>
-            Reset
-          <% end %>
+          <!-- Location Filter -->
+          <div>
+            <label for="location" class="block text-gray-700">Location</label>
+            <input type="text" id="location" name="location" value="<%= params[:location] %>"
+                  class="text-sm mt-1 rounded px-4 y-1" placeholder="Enter location">
+          </div>
+
+          <!-- Hours of Usage Filter -->
+          <div>
+            <label for="max_hours" class="block text-gray-700">Max Hours of Usage</label>
+            <input type="number" id="max_hours" name="max_hours" value="<%= params[:max_hours] %>"
+                  class="text-sm mt-1 rounded px-4 y-1" placeholder="Max Hours">
+          </div>
+
+          <!-- Submit Button -->
+          <div class="mt-6 flex items-center gap-5">
+            <button type="submit" class="btn-primary">
+              Apply Filters
+            </button>
+            <%= link_to tractors_path, class:"btn-outline" do %>
+              Reset
+            <% end %>
+          </div>
         </div>
       </div>
     </div>
+  <% else %>
+    <div class="flex justify-center items-center bg-gray-100 rounded font-medium uppercase w-full">
+       No Tractors.
+    </div>
+  <% end %>
   </div>
 <% end %>
 
